ovim/tests/snapshots/undo_redo_comprehensive_test__U_after_leaving_line.snap
---
source: tests/undo_redo_comprehensive_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 2

Buffer:
[i]ne 1
line 2
