ovim/tests/snapshots/undo_redo_comprehensive_test__undo_after_macro.snap
---
source: tests/undo_redo_comprehensive_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:0
Lines: 3

Buffer:
ello
[w]orld
test
