ovim/tests/snapshots/undo_redo_comprehensive_test__undo_all_then_redo_all.snap
---
source: tests/undo_redo_comprehensive_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 1

Buffer:
[l]o
