ovim/tests/snapshots/undo_redo_comprehensive_test__undo_macro_multiple_times.snap
---
source: ovim/tests/undo_redo_comprehensive_test.rs
assertion_line: 388
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 2:0
Lines: 3

Buffer:
bc
ef
[g]hi
