ovim/tests/snapshots/undo_redo_comprehensive_test__undo_multiple_changes.snap
---
source: tests/undo_redo_comprehensive_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 1

Buffer:
[e]llo
