ovim/tests/snapshots/undo_redo_comprehensive_test__undo_o_command.snap
---
source: ovim/tests/undo_redo_comprehensive_test.rs
assertion_line: 205
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 2

Buffer:
[l]ine 1
line 2
