ovim/tests/snapshots/undo_redo_comprehensive_test__undo_visual_change.snap
---
source: ovim/tests/undo_redo_comprehensive_test.rs
assertion_line: 344
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:4
Lines: 1

Buffer:
hell[o] world
